[package]
name = "mdbook-modern-dot"
version = "0.0.0"
authors = ["www159, 2107795244@qq.com"]
description = "mdBook preprocessor for Graphviz diagrams with light/dark theme support"
readme = "Readme.md"
license = "AGPL-3.0-or-later"
edition = "2024"
repository = "https://github.com/www159-used/mdbook-modern-dot"
homepage = "https://github.com/www159-used/mdbook-modern-dot"

[[bin]]
name = "mdbook-modern-dot"
path = "src/main.rs"


[dependencies]
mdbook-preprocessor = "^0.5.2"
mdbook-markdown = "^0.5.2"
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"
pulldown-cmark-to-cmark = "22.0"

regex = "1.12"
toml = "0.9"
serde = { version = "1.0", features = ["derive"] }

tokio = { version = "1.48", features = ["io-util", "process", "rt"] }
futures = "0.3"
async-recursion = "1.1"

[dev-dependencies]
tokio = { version = "1.48", features = ["macros", "time"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
